--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,7 @@
 @import "helpers/helpers";
 @import "components/components";
 @import "global/global";
+
 @import "sections/home";
 @import "sections/about";
+@import "sections/cms";
