--- a/css/style.css
+++ b/css/style.css
@@ -60,34 +60,31 @@ body {
   color: #000;
   padding: 1.9rem 0.7rem; }
 
-.hero {
-  background: -webkit-linear-gradient(top, #fff 0, #f5f5f5 100%);
-  height: 100vh; }
-  .hero__title-section {
-    width: 100%;
+.hero__title-section {
+  width: 100%;
+  text-align: center;
+  margin-top: 20rem; }
+  .hero__title-section h4 {
+    font-size: 2rem;
+    color: #ababab;
+    text-transform: uppercase;
+    letter-spacing: 0.2rem;
+    margin-bottom: 2rem; }
+  .hero__title-section h2 {
+    font-size: 4.8rem;
+    margin-bottom: 3rem; }
+  .hero__title-section .btn {
+    font-size: 1.8rem;
+    font-weight: 600;
+    border-radius: 0.5rem;
+    letter-spacing: 0em;
+    padding: 0 3rem;
+    background-image: linear-gradient(to right bottom, #ff70a5, #ffc76e);
+    border: none;
+    color: #fff;
     text-align: center;
-    margin-top: 20rem; }
-    .hero__title-section h4 {
-      font-size: 2rem;
-      color: #ababab;
-      text-transform: uppercase;
-      letter-spacing: 0.2rem;
-      margin-bottom: 2rem; }
-    .hero__title-section h2 {
-      font-size: 4.8rem;
-      margin-bottom: 3rem; }
-    .hero__title-section .btn {
-      font-size: 1.8rem;
-      font-weight: 600;
-      border-radius: 0.5rem;
-      letter-spacing: 0em;
-      padding: 0 3rem;
-      background-image: linear-gradient(to right bottom, #ff70a5, #ffc76e);
-      border: none;
-      color: #fff;
-      text-align: center;
-      height: 5.4rem;
-      line-height: 5.4rem; }
+    height: 5.4rem;
+    line-height: 5.4rem; }
 
 .feature {
   max-width: 1200px;
@@ -131,11 +128,15 @@ body {
       box-shadow: 0px 0px 30px 10px rgba(0, 0, 0, 0.1);
       transform: translateY(-8px);
       transition: all 0.7s ease-in; }
-    .feature__container img {
-      width: 12%;
+    .feature__container .image-box img {
+      width: 100%;
       margin: 0 auto;
       padding-top: 2rem;
       margin-bottom: 2rem; }
+    @media only screen and (min-width: 1000px) and (max-width: 3000px) {
+      .feature__container .image-box {
+        margin: 0 auto;
+        width: 30%; } }
     .feature__container__text {
       width: 100%;
       text-align: center; }
@@ -327,7 +328,6 @@ body {
       padding: 6rem 5rem 8rem 5rem; } }
   @media only screen and (min-width: 750px) and (max-width: 1440px) {
     .timeline-area .contain-left-time {
-      height: auto;
       padding: 0 3rem;
       padding-top: 6rem;
       text-align: right; }
@@ -376,26 +376,6 @@ body {
     padding-left: 4.5rem;
     position: relative;
     margin-bottom: 8rem; }
-    .timeline-area__charge-spots::after, .timeline-area__time-slot::after, .timeline-area__navigation::after {
-      content: "";
-      width: 8px;
-      height: 8px;
-      top: 10%;
-      left: -3%;
-      position: absolute;
-      background-color: #fff;
-      border-radius: 50%;
-      border: 3px solid #086ad8;
-      box-shadow: 0 0 0 8px #fff, 0 0 0 10px rgba(8, 106, 216, 0.15); }
-      @media only screen and (min-width: 380px) and (max-width: 750px) {
-        .timeline-area__charge-spots::after, .timeline-area__time-slot::after, .timeline-area__navigation::after {
-          left: -2.4%; } }
-      @media only screen and (min-width: 750px) and (max-width: 1000px) {
-        .timeline-area__charge-spots::after, .timeline-area__time-slot::after, .timeline-area__navigation::after {
-          left: 98%; } }
-      @media only screen and (min-width: 1000px) and (max-width: 4000px) {
-        .timeline-area__charge-spots::after, .timeline-area__time-slot::after, .timeline-area__navigation::after {
-          left: 99%; } }
   .timeline-area__heading {
     font-size: 3.2rem;
     line-height: 1;
