--- a/sass/sections/_home.scss
+++ b/sass/sections/_home.scss
@@ -44,8 +44,7 @@
 ///////////////////////////////
 
 .hero {
-  background: -webkit-linear-gradient(top, #fff 0, #f5f5f5 100%);
-  height: 100vh;
+  // background: -webkit-linear-gradient(top, #fff 0, #f5f5f5 100%);
 
   &__title-section {
     width: 100%;
@@ -137,11 +136,18 @@
       transition: all 0.7s ease-in;
     }
 
-    img {
-      width: 12%;
-      margin: 0 auto;
-      padding-top: 2rem;
-      margin-bottom: 2rem;
+    .image-box {
+      img {
+        width: 100%;
+        margin: 0 auto;
+        padding-top: 2rem;
+        margin-bottom: 2rem;
+      }
+
+      @media only screen and (min-width: 1000px) and (max-width: 3000px) {
+        margin: 0 auto;
+        width: 30%;
+      }
     }
 
     &__text {
@@ -412,7 +418,6 @@
 
   .contain-left-time {
     @media only screen and (min-width: 750px) and (max-width: 1440px) {
-      height: auto;
       padding: 0 3rem;
       padding-top: 6rem;
       text-align: right;
@@ -480,42 +485,6 @@
     padding-left: 4.5rem;
     position: relative;
     margin-bottom: 8rem;
-
-    &::after {
-      content: "";
-      width: 8px;
-      height: 8px;
-      top: 10%;
-      left: -3%;
-      position: absolute;
-      background-color: #fff;
-      border-radius: 50%;
-      border: 3px solid $color-blue;
-      box-shadow: 0 0 0 8px #fff, 0 0 0 10px rgba($color-blue, 0.15);
-
-      @media only screen and (min-width: 380px) and (max-width: 750px) {
-        left: -2.4%;
-      }
-
-      @media only screen and (min-width: 750px) and (max-width: 1000px) {
-        left: 98%;
-      }
-
-      @media only screen and (min-width: 1000px) and (max-width: 4000px) {
-        left: 99%;
-      }
-    }
-
-    // &::before {
-    //   content: "";
-    //   width: 25px;
-    //   height: 25px;
-    //   top: 8.3%;
-    //   left: -5.6%;
-    //   border: 1px solid rgba($color-blue, 0.15);
-    //   border-radius: 50%;
-    //   position: absolute;
-    // }
   }
 
   &__heading {
