--- a/sass/sections/_cms.scss
+++ b/sass/sections/_cms.scss
@@ -63,6 +63,12 @@
 
   .flex-container {
     display: flex;
+    flex-direction: column;
+
+    @media only screen and (min-width: 1000px) and (max-width: 3000px) {
+      display: flex;
+      flex-direction: row;
+    }
   }
 
   &-heading {
@@ -84,5 +90,14 @@
         font-size: 2.8rem;
       }
     }
+  }
+}
+
+////////////////////////////////////
+////     CMS FEATURE SECTION       ////
+////////////////////////////////////
+
+.cms__feature {
+  &-container {
   }
 }
